Fix search input on mobile devices

--- a/src/components/Atoms/SearchForm/SearchForm.module.css
+++ b/src/components/Atoms/SearchForm/SearchForm.module.css
@@ -5,6 +5,7 @@
 }
 
 .searchInput {
+  appearance: none;
   background-color: var(--color-grey-200);
   border: 0;
   border-radius: var(--border-radius-small);
